# Employee-monitoring

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
src/employee_monitoring/: manage.py
src/employee_monitoring/employee_monitoring/: asgi.py  settings.py  urls.py  wsgi.py
src/employee_monitoring/manager/: forms.py  models.py  urls.py  views.py
src/employee_monitoring/manager/migrations/: 0001_initial.py
src/employee_monitoring/manager/static/manager/css/: main.css
src/employee_monitoring/manager/static/manager/js/: main.js
src/employee_monitoring/manager/templates/manager/: index.html
src/employee_monitoring/manager/templatetags/: manager_tags.py  simpletag_mainpage_content.py
src/employee_monitoring/reservation/: urls.py  views.py
src/employee_monitoring/reservation/templates/reservation_templates/: auth.html
src/employee_monitoring/templates/: _base_mainpage.html  _base_profile.html  mainpage_content.html  mainpage_login.html  mainpage_register.html  profile_addaddress.html  profile_addtable.html  profile_getlinks.html  profile_stats.html  reservation.html
src/employee_monitoring/templates/forms/: form.html
src/employee_monitoring/templates/profile/: index.html
