[tool.poetry]
name = "employee-monitoring"
version = "0.1.0"
description = ""
authors = ["psychx <#_#>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.1"
pytest = "^8.2.2"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
